[gd_scene load_steps=5 format=2]

[ext_resource path="res://asset/texture/attack.png" type="Texture" id=1]
[ext_resource path="res://fighting/dude/attacks/fireball.gd" type="Script" id=2]
[ext_resource path="res://asset/gradient/fire_gradient.tres" type="Gradient" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[node name="fireball" type="Node2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8
vframes = 8
frame = 2

[node name="particles_active" type="CPUParticles2D" parent="."]
amount = 20
local_coords = false
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2( 0, -1 )
spread = 180.0
gravity = Vector2( 0, -98 )
initial_velocity = 40.0
color_ramp = ExtResource( 3 )

[node name="particles_blast" type="CPUParticles2D" parent="."]
emitting = false
amount = 200
lifetime = 0.25
one_shot = true
explosiveness = 0.9
local_coords = false
emission_shape = 1
emission_sphere_radius = 5.0
direction = Vector2( 0, -1 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
color_ramp = ExtResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
